--- a/index.html
+++ b/index.html
@@ -455,7 +455,8 @@
       </div>
 
     </div>
-  </div>
+
+</div>
 
   <div class="card card-work box">
     <div class="ribbon ribbon-top-right"><span>fixed-gear</span></div>
@@ -477,15 +478,14 @@
   </div>
 
   <div class="card card-work box">
-    <div class="ribbon ribbon-top-right"><span>my-blog</span></div>
-    <img class="card-img-top" src="images/my-work/my-blog.PNG" alt="Card image cap">
+    <div class="ribbon ribbon-top-right"><span>Join</span></div>
+    <img class="card-img-top" src="images/my-work/join.PNG" alt="Card image cap">
     <div class="card-body-work">
-      <p class="card-text">This is a single page website designed in Html and pure Css. It contains Menu, Posts
-        and information about life section.
-      </p>
+      <p class="card-text">This ia single page website build in Html and Css. It contains complete message boxes
+         and also have more articles.</p>
       
       <div class="link_wrapper">
-        <a href="https://rubabgul.github.io/my-blog/" target="blank">View More!</a>
+        <a href="https://rubabgul.github.io/join/index.html" target="blank">View More!</a>
         <div class="icon">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 268.832 268.832">
             <path d="M265.17 125.577l-80-80c-4.88-4.88-12.796-4.88-17.677 0-4.882 4.882-4.882 12.796 0 17.678l58.66 58.66H12.5c-6.903 0-12.5 5.598-12.5 12.5 0 6.903 5.597 12.5 12.5 12.5h213.654l-58.66 58.662c-4.88 4.882-4.88 12.796 0 17.678 2.44 2.44 5.64 3.66 8.84 3.66s6.398-1.22 8.84-3.66l79.997-80c4.883-4.882 4.883-12.796 0-17.678z"/>
@@ -495,6 +495,7 @@
       
     </div>
   </div>
+
   
 </div>
 
